add garbage collection logging options